wip:  website, scenarios, sensitivity

--- a/websites/cost-forecast-marketing/index.html
+++ b/websites/cost-forecast-marketing/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cost Forecast | Strategic Cost Modeling for Consultants</title>
-    <meta name="description" content="The premier cost modeling platform for professional consultants. Build, validate, and present complex economic models with confidence." />
-    <meta name="keywords" content="cost modeling, scenario planning, sensitivity analysis, consulting tools, economic modeling, B2B software" />
-    <meta property="og:title" content="Cost Forecast | Strategic Cost Modeling for Consultants" />
-    <meta property="og:description" content="Build complex cost models, run dynamic experiments, and deliver actionable insights to your B2B clients." />
-    <meta property="og:type" content="website" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CostVela | Strategic Cost Modeling for Consultants</title>
+  <meta name="description"
+    content="The premier cost modeling platform for professional consultants. Build, validate, and present complex economic models with confidence." />
+  <meta name="keywords"
+    content="costvela, cost modeling, scenario planning, sensitivity analysis, consulting tools, economic modeling, B2B software" />
+  <meta property="og:title" content="CostVela | Strategic Cost Modeling for Consultants" />
+  <meta property="og:description"
+    content="Build complex cost models, run dynamic experiments, and deliver actionable insights to your B2B clients." />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
